mythtv (0.21.0~fixes15967-0ubuntu2) hardy; urgency=low

  * Replace --tune=i686 and --cpu=i686 as it was a performance loss
    to tune to generic. (LP: #191165)

 -- Mario Limonciello <superm1@ubuntu.com>  Sat, 16 Feb 2008 02:07:39 -0600

mythtv (0.21.0~fixes15967-0ubuntu1) hardy; urgency=low

  * New upstream checkout.
    - Upstream has entered feature freeze and this is built
      against the 0.21-fixes branch now.
  * Update 07_alsa_default due to upstream changes again.
  * debian/control:
    - Add new python bindings package, libmyth-python.
    - Promote all mysql-server depends to pre-depends.
  * debian/rules:
    - Add python-support to build depends
    - Add libnet-upnp-perl to libmyth-perl depends.
  * Drop mythtv-common and mythtv-database experimental
    warnings.
  * debian/startmythtv.sh:
    - Launch via xterm to guarantee order that things happen.
  * Update pre-filled SQL file that is shipped to be 0.21.0 based

 -- Mario Limonciello <superm1@ubuntu.com>  Tue, 12 Feb 2008 20:13:15 -0600

mythtv (0.20.99+trunk15849-0ubuntu2) hardy; urgency=low

  * Update 07_alsa_default which was causing FTBFS
    due to changes with ALSA handling upstream.
  * Update 08_default_directory which was causing
    FTBFS since storage groups got moved.

 -- Mario Limonciello <superm1@ubuntu.com>  Fri, 08 Feb 2008 13:54:31 -0600

mythtv (0.20.99+trunk15849-0ubuntu1) hardy; urgency=low

  * New upstream checkout.
    - Fixes FTBFS on powerpc.
  * Drop 14_newlibraries since upstream does this now.
  * debian/rules:
    - Build with ffmpeg pthread support.
  * debian/control:
    - Depend on ttf-liberation | msttcorefonts since ttf-liberation
      provides fonts with the correct metrics.

 -- Mario Limonciello <superm1@ubuntu.com>  Sun, 03 Feb 2008 23:10:21 -0600

mythtv (0.20.99+trunk15689-0ubuntu3) hardy; urgency=low

  * debian/control:
    - Change soname of library package to libmyth-0.21-0
  * Update 09_perl_bindings_prefix, debian/libmyth-perl.files